--- a/client/src/views/footer/footer.css
+++ b/client/src/views/footer/footer.css
@@ -1,47 +1,83 @@
-/* .footer {
-    background-color: rgb(10, 10, 10);
-    padding: 1em 0;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-} */
-
-.footer{
-  max-height: 185px;
-  display: flex;
-  background-color: #272525;
-  position: absolute;
-  bottom: 0;
+.footer {
+  background:black;
   width: 100%;
-  height: 200px;
-  color: white;
+  height: 100px;
+  position: relative;
+  bottom: -62.5px;
+  
+}
+
+.site_footer {
+  display: flex;
+  height: 100%;
+  gap: 10px;
   justify-content: space-between;
-  padding: 1rem;
+  align-items: center;
+
 }
-.footer a{
-  text-decoration: none;
+.site_footer  p{
   color: white;
+  margin: 10px 5px 10px 80px;
+  
+}
+.site_footer .copyright{
+  justify-content: center;
+
 }
 
-.footer a:hover {
-  text-decoration: underline;
+.copyright p{
+  margin-right: 10px;
+  color: white;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding-left: 12px;
+  
 }
 
-.footer img{
+.redes_sociales a{
+  font-size: 3rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+.segmentos {
+  display: flex;
+  font-size: 10px;
+}
+.copy{
+  justify-content: center;
+}
+.redes_sociales img{
+  transition: all 500ms;
   width: 30px;
-  margin-right: 1rem;
+}
+.redes_sociales img:hover{
+  transform: scale(1.1);
 }
 
-.socialmedia{
-  display: flex;
+@media (max-width:600px) {
+  .site_footer .copyright{
+     font-size: 0.7em;
+     justify-self: end;
+  }
 }
-
-.rightContainer {
-  margin-right: 3rem;
+@media (max-width:510px) {
+  .footer{
+      bottom: -82px;
+      height: auto;
+  }
+  .site_footer{
+   display: flex;
+   flex-direction: column;
+  }
 }
-
-.team {
-  display: flex;
-  flex-direction: column;
+@media (max-width:900px) {
+  .footer{
+      bottom: -82px;
+      height: auto;
+  }
+  .site_footer{
+   display: flex;
+   flex-direction: column;
+  }
 }
