--- a/client/src/components/filtro/filtro.less
+++ b/client/src/components/filtro/filtro.less
@@ -14,9 +14,9 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 10rem;
-  justify-content: center;
   width: 20rem;
   margin-left: 8rem;
+  margin-top: 7rem;
 }
 
 .filt-tipo {
