--- a/client/src/components/order/Orden.css
+++ b/client/src/components/order/Orden.css
@@ -2,14 +2,17 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-.orde-pag label {
-  margin-left: 25%;
+  height: 5rem;
+  margin-top: 3rem;
 }
 .orden-tecto-1 {
   text-align: center;
   color: black;
   font-size: 30px;
+}
+.orden-tecto-1 h3 {
+  margin: 0;
+  margin-left: 20rem;
 }
 #ordenPrecio {
   margin-left: 10px;
@@ -19,6 +22,9 @@
 }
 #ordenPrecio:hover {
   cursor: pointer;
+}
+.ord-txt-a {
+  display: flex;
 }
 #ordenPrecio:focus {
   outline: none;
