--- a/client/src/views/footer/footer.css
+++ b/client/src/views/footer/footer.css
@@ -1,10 +1,9 @@
 .footer {
   background:black;
   width: 100%;
-  height: 100px;
-  position: relative;
-  bottom: -62.5px;
-  
+  height: 6rem;
+  position: absolute;
+  bottom: -7rem;
 }
 
 .site_footer {
