--- a/client/src/views/form/form.css
+++ b/client/src/views/form/form.css
@@ -1,6 +1,6 @@
 .contGral {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-top: 30px;
   padding-bottom: 275px;
 }
@@ -90,4 +90,18 @@
   border-radius: 50%;
   background-color: #000000;
   object-fit: contain;
+}
+
+h3 {
+  color: white;
+  margin-left: 85px;
+}
+
+h2 {
+  color: white;
+  margin-left: 30px;
+}
+
+.formsContainer {
+  display: flex;
 }
