arreglos home css

--- a/client/src/views/landing/landing.less
+++ b/client/src/views/landing/landing.less
@@ -173,24 +173,30 @@ html {
   height: 300px;
 }
 .slider-home {
-  background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678680730/digjw4howjydwikeqd6y.jpg);
+  background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678850098/vp6ldofnaovshpcmmret.png);
   background-size: cover;
   width: 100vw;
   height: 100%;
-  animation: animate 30s infinite;
+  animation: animate 80s ease 0.1s infinite;
+
 }
 
 @keyframes animate {
-  33% {
-    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678680730/fryylglf4wbk9nq8nupb.jpg);
+  25% {
+    
+    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678850099/mzniizfogtrt24quvb3a.png);
     background-size: cover;
   }
-  66% {
-    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678680730/okcgxudlfp0k04nk00kg.jpg);
+  50% {
+    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678850099/du39cecrln49d1hnnfcq.png);
+    background-size: cover;
+  }
+  75% {
+    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678850308/o5p1kfyjwo0nm78sljyl.png);
     background-size: cover;
   }
   100% {
-    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678680730/digjw4howjydwikeqd6y.jpg);
+    background-image: url(https://res.cloudinary.com/dzuasgy3l/image/upload/v1678850098/vp6ldofnaovshpcmmret.png);
     background-size: cover;
   }
 }
