--- a/client/src/views/home/home.css
+++ b/client/src/views/home/home.css
@@ -42,6 +42,7 @@ body {
 .Home-container {
   display: flex;
   flex-direction: column;
+  margin-left: 7rem;
 }
 .container-de-cintainer {
   display: flex;
