--- a/client/src/views/detalleProd/detalleProd.css
+++ b/client/src/views/detalleProd/detalleProd.css
@@ -44,6 +44,10 @@
   justify-content: center;
   align-items: center;
 }
+.detail-compara-cont:hover{
+  cursor:pointer;
+  background-color: rgba(255, 255, 255, 0.7);
+}
 .detail-precio-s {
   display: flex;
   justify-content: center;
@@ -79,6 +83,13 @@ text-align: center;
   text-align: center;
   gap: 2rem;
 }
+.detail-compara-cont:first-child{
+  background-color: #92e6a7;
+}
+.detail-compara-cont:first-child:hover{
+  background-color: #66da83;
+}
+
 
 .contenedor-detail {
   margin-top: 7rem;
