--- a/client/src/views/market/market.css
+++ b/client/src/views/market/market.css
@@ -1,13 +1,10 @@
 .img-market-f {
-  width: 30%;
+  width: 10%;
 }
 .container-market-c {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.container-market-c h1 {
-  background-color: white;
 }
 .container-prod-market {
   justify-content: center;
@@ -15,4 +12,21 @@
   display: grid;
   height: 40rem;
   grid-template-columns: auto auto auto auto auto;
+}
+.banner-sup {
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #0e0e0e;
+}
+.banner-sup h1 {
+  font-size: 10rem;
+  margin: 0;
+  margin-right: 3rem;
+}
+.leaflet-container {
+  width: 100%;
+  height: 23rem;
 }
