--- a/client/src/views/market/market.less
+++ b/client/src/views/market/market.less
@@ -42,3 +42,28 @@
     width: 100%;
     height: 23rem;
 }
+.txt-sup-of{
+    display: flex;
+    color: rgb(0, 0, 0);
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    h2{
+        margin-left: 2rem;
+    }
+    border-bottom: 3px solid rgb(158, 158, 158);
+}
+.asdkjkh{
+    color: rgb(0, 0, 0);
+}
+
+.bodyDark{
+    .asdkjkh{
+        color: rgb(255, 255, 255);
+    }
+    .txt-sup-of{
+        color: rgb(255, 255, 255);
+        border-bottom: 3px solid rgb(158, 158, 158);
+    }
+
+}
