--- a/client/src/views/about/about.css
+++ b/client/src/views/about/about.css
@@ -3,6 +3,22 @@
 }
 .container-About h1{
     justify-content: center;
+    font-size: 3rem;
+    text-align: center;
+    text-decoration: underline;
+}
+.text_about{
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 0.5rem;
+    height: 20%;
+    width: 90%;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .container{
     display: flex;
