--- a/client/src/views/contact/Contact.css
+++ b/client/src/views/contact/Contact.css
@@ -76,12 +76,18 @@
   
   .user-photo-contact {
     width: 12rem;
+    height:100% ;
     overflow: hidden;
     border: 1px solid rgb(231, 227, 227);
     box-shadow: 2px 2px 10px lightslategray;
     display: flex;
     align-items: center;
+    background-size: cover;
     justify-content: center;
+  }
+  .photo{
+    width: 100%;
+    height: 100%;
   }
     
   .bottom-part {
