--- a/client/src/views/contact/Contact.css
+++ b/client/src/views/contact/Contact.css
@@ -7,44 +7,47 @@
 }
 .card-container{
   padding: 15px;
-    width: 500px;
+    width: 480px;
     height: 200px;
     background: whitesmoke;
     transition: .2s linear;
     box-shadow: 1px 1px 10px lightslategray;
     cursor: default;
+    border-radius: 5px;
   }
   
   .card-top-part {
     width: 100%;
-    height: 70%;
-    padding: 5px;
+    height: 80%;
     display: flex;
+    justify-content:space-evenly;
   }
   .text{
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight:normal;
     color :black;  
-  }
-  .left-part {
-    padding: 15px;
-    padding-left: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-  .right-part {
-    width: 30%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
   }
   
   .user-name-contact{
+    
+    display: flex;
+    width: 100%;
+    justify-content:center;
+    text-align: center;
+    gap: 10px;
+  }
+  
+  .user-position{
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 10px;
+    justify-content: center;
+    text-align: center;
+    text-decoration: solid;
+    font-weight:600;
   }
   
   .name-contact {
@@ -75,7 +78,7 @@
   }
   
   .user-photo-contact {
-    width: 12rem;
+    width: 40%;
     height:100% ;
     overflow: hidden;
     border: 1px solid rgb(231, 227, 227);
@@ -84,6 +87,8 @@
     align-items: center;
     background-size: cover;
     justify-content: center;
+    border-radius: 5px;
+    margin-top:4%;
   }
   .photo{
     width: 100%;
