--- a/client/src/views/market/market.less
+++ b/client/src/views/market/market.less
@@ -67,3 +67,70 @@
     }
 
 }
+.cont-coment-super{
+    margin-top: 3rem;
+    color: white;
+    margin-bottom: 10rem;
+    width: 40%;
+}
+.input-com-su{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: rgb(114, 114, 114);
+    border-radius: 1rem;
+    button{
+        width: 6rem;
+        height: 2rem;
+        margin-top: 2rem;
+        background-color: #226296;
+        border: none;
+        color: white;
+        border-radius: 7px;
+        margin-bottom: 1rem;
+        &:hover{
+            cursor: pointer;
+            background-color:#173f61;
+        }
+    }
+    textarea{
+        width: 90%;
+        height: 5rem;
+        border-radius: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+.comentario-superm{
+
+    color: black;
+    div{
+        display: flex;
+        flex-direction: column;
+    }
+}
+.cont-com-sup-a{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns:auto;
+    gap: 2rem;
+    width: 100%;
+    h4{
+        color: white;
+    }
+    .label-1-su{
+        background-color: white;
+        height: 4rem;
+        border-radius: 3px;
+        width: 100%;
+    }
+    .label-2-su{
+        color: rgb(209, 165, 19);
+    }
+}
+.plla{
+    input{margin-right: 3rem;}
+    color: rgb(209, 165, 19);
+}
