--- a/client/src/views/market/market.css
+++ b/client/src/views/market/market.css
@@ -51,3 +51,71 @@
   color: #ffffff;
   border-bottom: 3px solid #9e9e9e;
 }
+.cont-coment-super {
+  margin-top: 3rem;
+  color: white;
+  margin-bottom: 10rem;
+  width: 40%;
+}
+.input-com-su {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #727272;
+  border-radius: 1rem;
+}
+.input-com-su button {
+  width: 6rem;
+  height: 2rem;
+  margin-top: 2rem;
+  background-color: #226296;
+  border: none;
+  color: white;
+  border-radius: 7px;
+  margin-bottom: 1rem;
+}
+.input-com-su button:hover {
+  cursor: pointer;
+  background-color: #173f61;
+}
+.input-com-su textarea {
+  width: 90%;
+  height: 5rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.comentario-superm {
+  color: black;
+}
+.comentario-superm div {
+  display: flex;
+  flex-direction: column;
+}
+.cont-com-sup-a {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: auto;
+  gap: 2rem;
+  width: 100%;
+}
+.cont-com-sup-a h4 {
+  color: white;
+}
+.cont-com-sup-a .label-1-su {
+  background-color: white;
+  height: 4rem;
+  border-radius: 3px;
+  width: 100%;
+}
+.cont-com-sup-a .label-2-su {
+  color: #d1a513;
+}
+.plla {
+  color: #d1a513;
+}
+.plla input {
+  margin-right: 3rem;
+}
