--- a/client/src/views/market/market.less
+++ b/client/src/views/market/market.less
@@ -10,127 +10,158 @@
 @celeste: #009ddd;
 @celeste-claro: #05d3f8;
 
-.img-market-f{
-    width: 10%;
+.img-market-f {
+  width: 10%;
 }
-.container-market-c{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+.container-market-c {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.container-prod-market{
-    justify-content: center;
-    align-items: center;
-    display: grid;
-    height: 40rem;
-    grid-template-columns: auto auto auto auto auto;
+.container-prod-market {
+  justify-content: center;
+  align-items: center;
+  display: grid;
+  height: 40rem;
+  grid-template-columns: auto auto auto auto auto;
 }
-.banner-sup{
-    display: flex;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    background-color: #0e0e0e;
-    h1{
-        font-size: 10rem;
-        margin: 0;
-        margin-right: 3rem;
-    }
+.banner-sup {
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #0e0e0e;
+  h1 {
+    font-size: 10rem;
+    margin: 0;
+    margin-right: 3rem;
+  }
 }
-.leaflet-container{
-    width: 100%;
-    height: 23rem;
+.leaflet-container {
+  width: 100%;
+  height: 23rem;
 }
-.txt-sup-of{
-    display: flex;
-    color: rgb(0, 0, 0);
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    h2{
-        margin-left: 2rem;
-    }
+.txt-sup-of {
+  display: flex;
+  color: rgb(0, 0, 0);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  h2 {
+    margin-left: 2rem;
+  }
+  border-bottom: 3px solid rgb(158, 158, 158);
+}
+.asdkjkh {
+  color: rgb(0, 0, 0);
+}
+
+.bodyDark {
+  .asdkjkh {
+    color: rgb(255, 255, 255);
+  }
+  .txt-sup-of {
+    color: rgb(255, 255, 255);
     border-bottom: 3px solid rgb(158, 158, 158);
+  }
 }
-.asdkjkh{
+.cont-coment-super {
+  margin-top: 3rem;
+  color: white;
+  margin-bottom: 10rem;
+  width: 40%;
+}
+.input-com-su {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 7rem;
+  justify-content: center;
+  width: 100%;
+  color: black;
+  border-radius: 4px;
+  button {
+    width: 6rem;
+    height: 2rem;
+    margin-top: 2rem;
+    background-color: #a8a8a8;
+    border: none;
     color: rgb(0, 0, 0);
-}
-
-.bodyDark{
-    .asdkjkh{
-        color: rgb(255, 255, 255);
+    border-radius: 7px;
+    margin-bottom: 1rem;
+    &:hover {
+      cursor: pointer;
+      background-color: #8a8a8a;
     }
-    .txt-sup-of{
-        color: rgb(255, 255, 255);
-        border-bottom: 3px solid rgb(158, 158, 158);
-    }
+  }
+  textarea {
+    width: 90%;
+    height: 5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 
+  input[type="radio"] {
+    display: none;
+  }
+  .plla label:hover,
+  .plla label:hover ~ label {
+    color: orange;
+    cursor: pointer;
+  }
+
+  input[type="radio"]:checked ~ label {
+    color: orange;
+  }
 }
-.cont-coment-super{
-    margin-top: 3rem;
-    color: white;
-    margin-bottom: 10rem;
-    width: 40%;
-}
-.input-com-su{
+.comentario-superm {
+  color: black;
+  div {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    background-color: rgb(114, 114, 114);
-    border-radius: 1rem;
-    button{
-        width: 6rem;
-        height: 2rem;
-        margin-top: 2rem;
-        background-color: #226296;
-        border: none;
-        color: white;
-        border-radius: 7px;
-        margin-bottom: 1rem;
-        &:hover{
-            cursor: pointer;
-            background-color:#173f61;
-        }
-    }
-    textarea{
-        width: 90%;
-        height: 5rem;
-        border-radius: 1rem;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-    }
+  }
 }
-.comentario-superm{
-
+.cont-com-sup-a {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: auto;
+  gap: 2rem;
+  width: 100%;
+  h4 {
     color: black;
-    div{
-        display: flex;
-        flex-direction: column;
-    }
-}
-.cont-com-sup-a{
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns:auto;
-    gap: 2rem;
+  }
+
+  .label-1-su {
+    background-color: white;
+    height: 4rem;
+    border-radius: 3px;
     width: 100%;
-    h4{
-        color: white;
-    }
-    .label-1-su{
-        background-color: white;
-        height: 4rem;
-        border-radius: 3px;
-        width: 100%;
-    }
-    .label-2-su{
-        color: rgb(209, 165, 19);
-    }
-}
-.plla{
-    input{margin-right: 3rem;}
+  }
+  .label-2-su {
     color: rgb(209, 165, 19);
+  }
+}
+.plla {
+  input {
+    margin-right: 3rem;
+  }
+  color: rgb(102, 102, 102);
+  font-size: 35px;
+}
+
+.bodyDark {
+  .comentario-superm {
+    h4 {
+      color: white;
+    }
+  }
+  .input-com-su {
+    color: rgb(255, 255, 255);
+  }
+}
+
+.plla {
+  direction: rtl;
+  unicode-bidi: bidi-override;
 }
