--- a/client/src/views/market/market.less
+++ b/client/src/views/market/market.less
@@ -238,3 +238,13 @@
     background-color: #960000;
   }
 }
+.bodyDark{
+  .foto-av-txc-s{
+    input{
+      color: white;
+    }
+  }
+  .label-1-su{
+    color: white;
+  }
+}
