--- a/client/src/components/Navbar/navBar.css
+++ b/client/src/components/Navbar/navBar.css
@@ -83,20 +83,21 @@ body {
 }
 
 .navButton {
-  height: 2.5vw;
-  width: 5vw;
-  margin-right: 2rem;
+  height: 2vw;
+  width: 5;
   border-radius: 10px;
   cursor: pointer;
-  background-color: #23477c;
+  background-color: #0f7e53;
   border: none;
   transition: 0.3s;
   color: white;
   font-family: "Phudu", cursive;
+  margin: 0;
 }
 
+
 .navButton:hover {
-  background-color: #193053;
+  background-color:  #094730;
 }
 
 .account-login {
@@ -460,6 +461,10 @@ body {
   flex-direction: row;
   align-items: center;
   gap: 30%;
+  width: 8rem;
+}
+.user-container:hover{
+  cursor: pointer;
 }
 
 .name {
