--- a/client/src/components/user/user.css
+++ b/client/src/components/user/user.css
@@ -52,3 +52,45 @@
   .merc-container:hover{
     background-color: #1a355c;
   }
+  .profileImg{
+    border: none;
+    cursor: pointer;
+    background-color: white;
+    color: blanchedalmond;
+    font-size: 20px;
+  }
+  
+  /*Botón hover y focus*/
+  .profileImg:hover, drop-buttton:hover{
+    background-color:white;
+  }
+  .dropdown-content{
+    display: none;
+    position: absolute;
+    min-width: 130px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a, .dropdown-content p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    height: 2.5rem;
+    font-size: 17px;
+    color: black;
+    width: 130px;
+    margin: 0;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  
+  .dropdown-content a:hover, .dropdown-content p:hover{
+    background-color: rgb(185, 185, 185);
+    cursor: pointer;
+  }
+  .show {
+    display: block;
+  }
