--- a/client/src/views/SuperMerc/superMerc.less
+++ b/client/src/views/SuperMerc/superMerc.less
@@ -75,3 +75,14 @@
     margin: 0;
     margin-right: 2rem;
   }
+  .felcha-drop-wh{
+    width: 20px;
+  }
+  .name-cont0e0d0 img{
+    object-fit: contain;
+    margin-left: 8px;
+    margin-top: 8px;
+  }
+  .name-cont0e0d0{
+    display: flex;
+  }
