--- a/client/src/components/user/user.css
+++ b/client/src/components/user/user.css
@@ -57,6 +57,12 @@
     cursor: pointer;
     font-size: 20px;
     color: white;
+    width: 4rem;
+    text-align: center;
+    height: 2rem;
+  }
+  .name-cont0e0d0:hover{
+background-color: rgb(68, 68, 68);
   }
   
   .dropdown-content{
