--- a/client/src/views/SuperMerc/superMerc.less
+++ b/client/src/views/SuperMerc/superMerc.less
@@ -80,9 +80,10 @@
   }
   .name-cont0e0d0 img{
     object-fit: contain;
-    margin-left: 8px;
-    margin-top: 8px;
+
   }
   .name-cont0e0d0{
     display: flex;
+    align-items: center;
+    height: 2rem;
   }
