--- a/client/src/views/SuperMerc/superMerc.less
+++ b/client/src/views/SuperMerc/superMerc.less
@@ -11,8 +11,8 @@
 @celeste-claro: #05d3f8;
 
 .detail-precio-s-a img {
-  width: 10rem;
-  height: 10rem;
+  width: 6rem;
+  height: 6rem;
   object-fit: contain;
 }
 
@@ -23,12 +23,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 20rem;
+  width: 10rem;
   text-align: center;
   font-weight: 700;
   margin-left: 1rem;
   margin-right: 1rem;
-  h2{
+  height: 15rem;
+  h2 {
     margin: 0;
   }
 }
@@ -36,54 +37,74 @@
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.7);
 }
-.cont-sup-lis-a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.cont-sup-lis-a {
+  display: grid;
+  grid-template-columns: 7rem 7rem 7rem 7rem 7rem;
+  column-gap: 5rem;
+  row-gap: 1rem;
+  height: 50vh;
+  margin-top: 3rem;
 }
-.queso-asdad-aa{
-    display: flex;
-     margin-left: 0.7rem;
+.queso-asdad-aa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.patexto-sup{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    h1{
-        color: white;
+.patexto-sup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  h1 {
+    font-size: 70px;
+    color: rgb(0, 0, 0);
+  }
+}
+.bodyDark {
+  .patexto-sup {
+    h1 {
+      color: rgb(255, 255, 255);
     }
+  }
 }
-.display-nav-a{
-    display: flex;
-    .navButton{
-        margin-left: 1rem;
-    }
+.display-nav-a {
+  display: flex;
+  .navButton {
+    margin-left: 1rem;
+  }
 }
 
 .navButtonP {
-    height: 2.5vw;
-    width: 5;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #23477c;
-    border: none;
-    transition: 0.3s;
-    color: white;
-    font-family: "Phudu", cursive;
-    margin: 0;
-    margin-right: 2rem;
-  }
-  .felcha-drop-wh{
-    width: 20px;
-  }
-  .name-cont0e0d0 img{
-    object-fit: contain;
+  height: 2.5vw;
+  width: 5;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #23477c;
+  border: none;
+  transition: 0.3s;
+  color: white;
+  font-family: "Phudu", cursive;
+  margin: 0;
+  margin-right: 2rem;
+}
+.felcha-drop-wh {
+  width: 20px;
+}
+.name-cont0e0d0 img {
+  object-fit: contain;
+}
+.name-cont0e0d0 {
+  display: flex;
+  align-items: center;
+  height: 2rem;
+}
 
+.label-5-su {
+  text-align: center;
+  color: gray;
+  display: flex;
+  align-items: center;
+  p {
+    color: rgb(209, 165, 19);
   }
-  .name-cont0e0d0{
-    display: flex;
-    align-items: center;
-    height: 2rem;
-  }
+}
