--- a/client/src/views/contact/Contact.css
+++ b/client/src/views/contact/Contact.css
@@ -7,7 +7,7 @@
 }
 .card-container{
   padding: 15px;
-    width: 480px;
+    width: 400px;
     height: 200px;
     background: whitesmoke;
     transition: .2s linear;
@@ -78,8 +78,8 @@
   }
   
   .user-photo-contact {
-    width: 40%;
-    height:100% ;
+    width: 10rem;
+    height:10rem;
     overflow: hidden;
     border: 1px solid rgb(231, 227, 227);
     box-shadow: 2px 2px 10px lightslategray;
@@ -90,9 +90,9 @@
     border-radius: 5px;
     margin-top:4%;
   }
-  .photo{
-    width: 100%;
-    height: 100%;
+  .photo-asasff-{
+    object-fit: contain;
+    width: 10rem;
   }
     
   .bottom-part {
