--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -7,7 +7,7 @@
     cursor: pointer;
 }
 .card {
-    width: 150px;
+    width: 15   0px;
     height: 220px;
     border-radius: 5px;
     background: #ffffff;
