--- a/client/src/components/dashboard/dashUsers.less
+++ b/client/src/components/dashboard/dashUsers.less
@@ -16,6 +16,87 @@
   align-items: center;
   justify-content: center;
 }
+.div-docnt-cont-g{
+  display: flex; 
+  width: 70%;
+  justify-content: center;
+  margin-bottom: 100px;
+
+  canvas{
+    width:500px !important;
+    height:300px !important;
+  }
+}
+.verdes-assasdd-{
+  h3{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 1s;
+  h3{
+    &:hover{
+      transition: 1s;
+      transform: scale(1.1);
+    }
+
+  }
+}
+}
+.dis-div-pre-mp{
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+
+  div{
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .verde-asc-sad{
+    color: green;
+  }
+}
+.div-as-ss-ee-as-{
+  display: flex;
+  flex-direction: column;
+  input{
+    width: 60%;
+    height: 30px;
+    border: none;
+    &:focus-visible{
+      outline: none;
+    }
+  }
+  button{
+    height: 30px;
+    width: 30%;
+    border: none;
+    color: white;
+    background-color: rgb(54, 121, 0);
+    margin-left: 10px;
+    &:hover{
+      background-color: rgb(45, 100, 0);
+      cursor: pointer;
+    }
+  }
+}
+.bodyDark{
+  transition: 1s;
+  .div-cont-graf{
+
+    color: white;
+  }
+
+}
+.div-cont-graf{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80vw;
+  h2{
+    margin-bottom: 40px;
+  }
+}
 .but-pag-a,
 .but-pag-s {
   margin-top: 1rem;
@@ -24,7 +105,6 @@
 .cont-de-cont {
   display: flex;
   flex-direction: column;
-  margin-top: 150px;
 }
 .tras {
   margin-bottom: 20px;
