--- a/client/src/components/PerfilUser/Perfil.css
+++ b/client/src/components/PerfilUser/Perfil.css
@@ -6,7 +6,7 @@
 .useroptionclick button {
   background-color: #386dbd;
   padding-left: 6%;
-  width: 100%;
+  width: 50vw;
   border: none;
   font-size: 20px;
   height: 4rem;
@@ -36,11 +36,12 @@
   margin-bottom: 100px;
 }
 .container_datos {
+  display: flex;
+  justify-content: center;
   height: 100vh;
-  width: 20%;
+  width: 100%;
 }
 .container_datos img {
-  margin-left: 46%;
   margin-bottom: 10px;
   width: 100px;
 }
@@ -114,9 +115,7 @@
 .renderUser button {
   width: 100%;
 }
-.container_datos {
-  width: 40%;
-}
+
 .optionsUser {
   justify-content: center;
   display: flex;
