--- a/client/src/views/autorizacionMercader/autorizacionMercader.css
+++ b/client/src/views/autorizacionMercader/autorizacionMercader.css
@@ -136,6 +136,11 @@ todo {
   font-size: 0.8rem;
 }
 
+.reg-image-formz {
+  display: flex;
+  flex-direction: column;
+}
+
 @media only screen and (min-width: 1400px) and (max-width: 1000000px) {
 }
 
