--- a/client/src/views/form/form.css
+++ b/client/src/views/form/form.css
@@ -153,7 +153,7 @@
 .x23-a .input-img-tas {
   width: 15rem;
 }
-.x23-a img {
+.reg-image-formz img {
   margin-left: 3rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
