--- a/client/src/views/detalleProd/detalleProd.css
+++ b/client/src/views/detalleProd/detalleProd.css
@@ -3,7 +3,7 @@
   justify-content: center;
   font-family: "Phudu", cursive;
   color: #040c2e;
-  height: fit-content;
+  height: 100vh;
 }
 .Detail-container a button {
   border-radius: 5px;
@@ -77,7 +77,7 @@ text-align: center;
 }
 .contenedor-detail {
   display: grid;
-  grid-template-columns: 10rem 10rem;
+  grid-template-columns: 10rem 10rem 10rem;
   height: 10rem;
   text-align: center;
   gap: 2rem;
@@ -91,6 +91,6 @@ text-align: center;
 
 
 .contenedor-detail {
-  margin-top: 7rem;
+  margin-top: 13rem;
   margin-left: 10rem;
 }
