--- a/client/src/views/form/form.css
+++ b/client/src/views/form/form.css
@@ -119,8 +119,8 @@
 }
 .contGral form {
   background-color: white;
-  width: 40rem;
-  height: 34rem;
+  width: 30rem;
+  height: 36rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -145,7 +145,7 @@
   background-color: #003f00;
 }
 .x23-a {
-  margin-left: 4rem;
+  margin-left: 3rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -182,7 +182,21 @@
   display: flex;
 }
 .flex-asd-f p {
-  color: white;
+  color: rgb(0, 0, 0);
   width: 20rem;
   margin-left: 3rem;
+  font-size: 20px;
+}
+.bodyDark .flex-asd-f p{
+   color: rgb(255, 255, 255);
+}
+.bodyDark .cont-form-2{
+  color: white;
+}
+.cont-form-2{
+  color: black;
+}
+.cont-form-2 h2{
+  font-size: 30px;
+  color: black;
 }
