--- a/client/src/components/PerfilUser/Perfil.css
+++ b/client/src/components/PerfilUser/Perfil.css
@@ -41,6 +41,18 @@
   height: 100vh;
   width: 100%;
 }
+.container_datos-2{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+}
+.container_datos-2 img {
+  display: flex;
+  margin-bottom: 10px;
+  width: 100px;
+}
+
 .container_datos img {
   margin-bottom: 10px;
   width: 100px;
