--- a/client/src/views/form/form.css
+++ b/client/src/views/form/form.css
@@ -105,6 +105,7 @@
 .text-info-form {
   width: 10rem;
   margin-left: 3rem;
+  text-align: justify;
 }
 .txt-form-ayu {
   display: flex;
@@ -191,6 +192,9 @@
    color: rgb(255, 255, 255);
 }
 .bodyDark .cont-form-2{
+  color: white;
+}
+.bodyDark .cont-form-2 h2{
   color: white;
 }
 .cont-form-2{
