--- a/client/src/components/dashboard/dashUsers.less
+++ b/client/src/components/dashboard/dashUsers.less
@@ -116,6 +116,14 @@
 
 .ed-img-av {
   width: 100px;
+  height: 100px;
+}
+.ed-img-av img{
+ object-fit: contain;
+}
+.ed-img{
+  width: 100px;
+  height: 100px;
 }
 .container-ed-users {
   display: flex;
@@ -263,7 +271,7 @@ input:checked + .slide:before {
   background-color: white;
   table {
     display: flex;
-    border: 2px solid black;
+    border: 1px solid rgb(102, 102, 102);
     align-items: center;
     text-align: center;
     justify-content: center;
