--- a/client/src/views/form/form.less
+++ b/client/src/views/form/form.less
@@ -30,6 +30,7 @@
     }
   }
 }
+
 .volver-form{
     border-radius: 5px;
   margin-left: 30px;
@@ -134,8 +135,8 @@
 }
 .contGral form{
     background-color: white;
-    width: 40rem;
-    height: 34rem;
+    width: 30rem;
+    height: 38rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -200,4 +201,19 @@
         width: 20rem;
         margin-left: 3rem;
     }
+}
+.mer-prod-mi-la-img p{
+    color: black;
+    font-size: 15px;
+    margin: 0;
+}
+.mer-prod-mi-la-img {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 15px;
+    margin: 0;
 }
