--- a/client/src/components/dashboard/dashUsers.css
+++ b/client/src/components/dashboard/dashUsers.css
@@ -93,6 +93,14 @@
 }
 .ed-img-av {
   width: 100px;
+  height: 100px;
+}
+.ed-img-av img {
+  object-fit: contain;
+}
+.ed-img {
+  width: 100px;
+  height: 100px;
 }
 .container-ed-users {
   display: flex;
@@ -232,7 +240,7 @@ input:checked + .slide:before {
 }
 .container-ed-users table {
   display: flex;
-  border: 2px solid black;
+  border: 1px solid #666666;
   align-items: center;
   text-align: center;
   justify-content: center;
