--- a/client/src/views/SuperMerc/superMerc.less
+++ b/client/src/views/SuperMerc/superMerc.less
@@ -42,9 +42,12 @@
   grid-template-columns: 7rem 7rem 7rem 7rem 7rem;
   column-gap: 5rem;
   row-gap: 1rem;
-  height: 100vh;
   margin-top: 3rem;
 }
+.cont-as-di-fle{
+  height: 90vh;
+}
+
 .queso-asdad-aa {
   display: flex;
   align-items: center;
