--- a/client/src/views/form/form.css
+++ b/client/src/views/form/form.css
@@ -105,7 +105,6 @@
 .text-info-form {
   width: 10rem;
   margin-left: 3rem;
-  text-align: justify;
 }
 .txt-form-ayu {
   display: flex;
@@ -121,7 +120,7 @@
 .contGral form {
   background-color: white;
   width: 30rem;
-  height: 36rem;
+  height: 38rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -146,7 +145,7 @@
   background-color: #003f00;
 }
 .x23-a {
-  margin-left: 3rem;
+  margin-left: 4rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -154,7 +153,7 @@
 .x23-a .input-img-tas {
   width: 15rem;
 }
-.reg-image-formz img {
+.x23-a img {
   margin-left: 3rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -183,24 +182,22 @@
   display: flex;
 }
 .flex-asd-f p {
-  color: rgb(0, 0, 0);
+  color: white;
   width: 20rem;
   margin-left: 3rem;
-  font-size: 20px;
 }
-.bodyDark .flex-asd-f p{
-   color: rgb(255, 255, 255);
-}
-.bodyDark .cont-form-2{
-  color: white;
-}
-.bodyDark .cont-form-2 h2{
-  color: white;
-}
-.cont-form-2{
+.mer-prod-mi-la-img p {
   color: black;
+  font-size: 15px;
+  margin: 0;
 }
-.cont-form-2 h2{
-  font-size: 30px;
+.mer-prod-mi-la-img {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: black;
+  font-size: 15px;
+  margin: 0;
 }
