--- a/client/src/views/detalleProd/detalleProd.css
+++ b/client/src/views/detalleProd/detalleProd.css
@@ -24,8 +24,8 @@
   background-color: #112749;
 }
 .det-prod {
-  margin-top: 13rem;
-  height: 50vh;
+  margin: auto 20px;
+  
   width: 20rem;
   background-color: #ffffff;
   display: flex;
@@ -72,7 +72,7 @@
   border-bottom: 2px solid #858585;
 }
 .textContainer {
-  width: 25rem;
+ 
 text-align: center;
 }
 .contenedor-detail {
