--- a/client/src/views/home/home.css
+++ b/client/src/views/home/home.css
@@ -43,6 +43,9 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 7rem;
+  align-items: center;
+ margin-bottom: 20px;
+ height: 100%;
 }
 .container-de-cintainer {
   display: flex;
