--- a/client/src/views/market/market.less
+++ b/client/src/views/market/market.less
@@ -249,3 +249,10 @@
     color: white;
   }
 }
+.container_comentarios{
+  color: rgb(0, 0, 0);
+  height: 90vh;
+}
+.bodyDark .container_comentarios{
+  color: white;
+}
