--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -29,38 +29,59 @@
   align-items: center;
   width: 200px;
 }
-.detail-compara-cont-2 input{
+.detail-compara-cont-2 input {
   text-align: center;
-   height: 30px;
-   margin-bottom: 10px;
+  height: 30px;
+  margin-bottom: 10px;
+  width: 60%;
 }
 .detail-compara-cont-2 button{
+  margin-top: 10px;
+  margin-left: 80%;
+  background-color: red;
+  border: none;
+  border-radius: 1px;
+}
+.detail-compara-cont-2 button:hover{
+  cursor: pointer;
+  background-color: rgb(119, 0, 0);
+
+}
+.detail-compara-cont-2 div button {
   height: 25px;
-  width: 100px;
+  width: 50%;
   background-color: rgb(0, 65, 0);
   color: white;
   border: none;
   margin-bottom: 10px;
 }
-.detail-compara-cont-2 button:hover{
+.detail-compara-cont-2 div {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.detail-compara-cont-2 h3 {
+ margin: 0;
+}
+.detail-compara-cont-2  div button:hover {
   cursor: pointer;
   background-color: rgb(0, 41, 0);
-
 }
-.cont-form-3{
+.cont-form-3 {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 90vh;
 }
 
-.detail-compara-cont-2 img{
+.detail-compara-cont-2 img {
   margin-top: 10px;
   width: 100px;
   height: 100px;
   object-fit: contain;
 }
-.cont-mi-por-a-se{
+.cont-mi-por-a-se {
   display: grid;
   justify-content: center;
   grid-template-columns: 200px 200px 200px 200px;
@@ -74,6 +95,11 @@
   display: grid;
   place-content: center;
 }
+.super-det-pre-2-pla {
+  text-align: center;
+  color: rgb(0, 73, 0);
+}
+
 .cardetails img {
   width: 130px;
   height: 130px;
