--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -35,18 +35,19 @@
   margin-bottom: 10px;
   width: 60%;
 }
-.detail-compara-cont-2 button{
+.detail-compara-cont-2 button {
   color: white;
   margin-top: 10px;
-  margin-left: 80%;
   background-color: red;
   border: none;
   border-radius: 3px;
+  margin-top: 10px;
+
 }
-.detail-compara-cont-2 button:hover{
+
+.detail-compara-cont-2 button:hover {
   cursor: pointer;
   background-color: rgb(119, 0, 0);
-
 }
 .detail-compara-cont-2 div button {
   height: 25px;
@@ -63,9 +64,9 @@
   flex-direction: column;
 }
 .detail-compara-cont-2 h3 {
- margin: 0;
+  margin: 0;
 }
-.detail-compara-cont-2  div button:hover {
+.detail-compara-cont-2 div button:hover {
   cursor: pointer;
   background-color: rgb(0, 41, 0);
 }
